--- a/strukt.html
+++ b/strukt.html
@@ -2,15 +2,23 @@
 Das Programm soll folgende Strukturellen Elemente beinhalten:
 
 - Log-In Maske
--- Textfeld für Username
--- Feld ohne Anzeige für die Passworteingabe
-- Tabelle 4x4 (Für die Anzeige des Spielfelds, ohne die Handkarten des Spielers. Aktion bei Klick auf die Karten. Funktion abhängig von Kartentyp)
+-- Textfeld fÃ¼r Username
+-- Feld ohne Anzeige fÃ¼r die Passworteingabe
+- Tabelle 4x4 (FÃ¼r die Anzeige des Spielfelds, ohne die Handkarten des Spielers. Aktion bei Klick auf die Karten. Funktion abhÃ¤ngig von Kartentyp)
 -- Dorf und Heldenkarten: Kaufen
 -- Monsterkarten: Kampf
-- Tabelle 7x1 (Für die Anzeige der Handkarten des Spielers. Menü bei klick auf eine Karte)
--- Option1: Karte zurückhalten
--- Option2: Karte zerstören
-- Schaltfläche zum Beenden der Runde (Muss nur sichtbar/anwählbar sein wenn Karten zum zurückhalten ausgewählt sind)
+- Tabelle 7x1 (FÃ¼r die Anzeige der Handkarten des Spielers. MenÃ¼ bei klick auf eine Karte)
+-- Option1: Karte zurÃ¼ckhalten
+-- Option2: Karte zerstÃ¶ren
+- SchaltflÃ¤che zum Beenden der Runde (Muss nur sichtbar/anwÃ¤hlbar sein wenn Karten zum zurÃ¼ckhalten ausgewÃ¤hlt sind)
 - Hintergrundbild
 
+-->
+<!--
+	=== Feedback ThiPhuongThaoHo, 2016-04-14 ===
+Ich wÃ¼rde gerne Ihnen einpaar VorschÃ¤lge geben, um Ihre strukturellen Elemente zu verbessern
+-In Log-In Maske:
+     -- Schaltflaeche fÃ¼r die BestÃ¤tigung des Spielernames und fÃ¼r den Start des Spiels ( Nach dem  Feld ohne Anzeige fÃ¼r die Passworteingabe )
+- Textfeld fÃ¼r Spielanleitung.
+- Hintergrundemusik.
 -->
