--- a/strukt.html
+++ b/strukt.html
@@ -22,3 +22,17 @@ Ich würde gerne Ihnen einpaar Vorschälge geben, um Ihre strukturellen Elemente
 - Textfeld für Spielanleitung.
 - Hintergrundemusik.
 -->
+
+Hier ein paar Überlegungen und Anregungen für Ergänzungen:
+-	Woraus besteht die Struktur "Karte" selbst? Nur aus einer Bilddatei oder auch aus Feldern mit Variablen, die der Computer 
+	versteht? (z.B. Variablen mit Punkten für eine bestimmte Fähigkeit/Stärke, sodass die Karten verglichen werden können, z.B.
+			Karte A hat 5 Kampfpunkte, Karte B hat 7 Kampfpunkte -->Computer weiß: Karte B stärker als Karte A)
+-	Was bedeutet, jeder Stapel hat "unendlich" viele Karten, wie in der Projektidee beschrieben?
+	- ? 	Es gibt endlich viele Karten, die vorher definiert wurden, man kann aber unendlich oft eine neue ziehen
+		(entspricht dem Mischen und erneuten Hinlegen der Karten im echten Spiel)
+	- ?	Es gibt unendlich viele Karten insofern, alsdass jede gezogene neu vom Computer selbst generiert wird
+		(dafür kann die Struktur "Karte" nicht nur aus einer Bilddatei bestehen und ein Zufallsgenerator muss
+		eingebunden werden)
+-	Hintergrundmusik empfehle ich auch, um die Sache abzurunden
+-	da fällt mir ein, was bei mir auch fehlt: Bilddatei als Startbildschirm mit Logo und Aufmacherbild, nach Klick geht es
+	zum eigentlichen Spiel
