--- a/strukt.html
+++ b/strukt.html
@@ -23,6 +23,7 @@ Ich würde gerne Ihnen einpaar Vorschälge geben, um Ihre strukturellen Elemente
 - Hintergrundemusik.
 -->
 
+SusannaAlbrecht:
 Hier ein paar Überlegungen und Anregungen für Ergänzungen:
 -	Woraus besteht die Struktur "Karte" selbst? Nur aus einer Bilddatei oder auch aus Feldern mit Variablen, die der Computer 
 	versteht? (z.B. Variablen mit Punkten für eine bestimmte Fähigkeit/Stärke, sodass die Karten verglichen werden können, z.B.
