--- a/strukt.html
+++ b/strukt.html
@@ -37,3 +37,6 @@ Hier ein paar Überlegungen und Anregungen für Ergänzungen:
 -	Hintergrundmusik empfehle ich auch, um die Sache abzurunden
 -	da fällt mir ein, was bei mir auch fehlt: Bilddatei als Startbildschirm mit Logo und Aufmacherbild, nach Klick geht es
 	zum eigentlichen Spiel
+
+<!-- Vielleicht noch eine weitere Idee meiner Seite. Wie sieht es mit Rundenübergreifenden Statistiken aus?
+Also gewonnene Spiele im Vergleich zu Verlorenen Spielen. Und daraus resultierend - wenn das Spiel onilne laufen soll - eine Leaderboards? -->
