--- a/strukt.html
+++ b/strukt.html
@@ -50,3 +50,16 @@ Das Programm Monopoly soll folgende Strukturellen Elemente beinhalten:
 Aufgrund der Änderung des Projektes musste ich leider die Kommentare meiner Mitstudenten entfernen. Danke trotzdem für die Mühe. :)
 
 -->
+
+<!--
+===================================
+=== Feedback Alpers, 2016-07-25 ===
+===================================
+
+Zwei Anmerkungen:
+
+(1) Bevor Sie hier weiter machen überarbeiten Sie bitte zunächst die Beschreibung entsprechend der dortigen Hinweise; die werden zum Teil die Struktur deutlich beeinflussen und daraus würde sich ein unnötiger Mehraufwand ergeben, wenn Sie sie erst später ausarbeiten.
+
+(2) Bitte lesen Sie sich die gesammelten Hinweise zu den Aufgaben durch: Für die strukturellen Elemente hatte ich einige formale Anforderungen erstellt, die Sie beim aktuellen Stand noch nicht beachten. Die sind allerdings nicht als Fleißaufgabe gedacht, sondern sollen dazu dienen, dass Sie spätere Änderungen mit möglichst wenig Aufwand einpflegen können.
+
+-->
